[package]
name = "bmr-challenge3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
panic-halt = "0.2.0"
longan-nano = { version = "0.3.0", features = ["lcd"] }
riscv-rt = "0.9.0"
embedded-graphics = "0.7.1"
st7735-lcd = { version = "0.8.1", optional = true }
gd32vf103xx-hal = "0.5.0"
riscv = "0.8.0"
heapless = "0.7.16"

# [features]
# lcd=["st7735-lcd"]